--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "22.0.1"
 
     defaultConfig {
         applicationId "com.marlinl.android.budumap"
-        minSdkVersion 16
+        minSdkVersion 8
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -20,11 +20,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
-    compile files('libs/android-support-v4.jar')
-    compile files('libs/BaiduLBS_Android.jar')
     compile files('libs/BaiduTraceSDK_v2_1_3.jar')
-    compile files('libs/gson-2.2.1.jar')
 }
