--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         <service android:name="com.baidu.trace.LBSTraceService"
             android:enabled="true"
             android:exported="true"></service>
+        <meta-data
+            android:name="com.baidu.lbsapi.API_KEY"
+            android:value="G9TMpcmpUaremENM0d5Gu7bB" />
     </application>
     <!-- 这个权限用于进行网络定位-->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
